--- a/jstyle.css
+++ b/jstyle.css
@@ -1,3 +1,15 @@
+.float_left
+{
+    float:left;
+}
+
+#form_response_frame
+{
+    width:500px;
+    height:300px;
+    float:left;
+}
+
 .tab
 {
     overflow: hidden;
