--- a/jstyle.css
+++ b/jstyle.css
@@ -1,11 +1,48 @@
-.float_left
+#c4_name_form
 {
+    width:30%;
+    height:300px;
+    margin-top:6px;
     float:left;
+}
+
+#c4_form_preview
+{
+    width:30%;
+    min-height:300px;
+    height:300px;
+    float:left;
+    text-align:center;
+    overflow: hidden;
+}
+
+#c4_form_preview_title
+{
+    border:1px solid black;
+    /*margin:auto;*/
+    background-color:lightgrey;
+}
+
+#c4_form_preview_name
+{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:red;
+}
+
+#c4_form_preview_email
+{
+    font-family: 'Times New Roman', Times, serif;
+    color:blue;
+}
+
+#c4_form_preview_email:hover
+{
+    text-decoration: underline;
 }
 
 #form_response_frame
 {
-    width:500px;
+    width:30%;
     height:300px;
     float:left;
 }
@@ -62,8 +99,8 @@ div.centre *
 div.frame
 {
     border:1px #666 solid;
-    padding: 6px 12px;
-    overflow:hidden;
+    /*padding: 6px 12px;*/
+    /*overflow:hidden;*/
 }
 
 p.highlight:hover
