--- a/jstyle.css
+++ b/jstyle.css
@@ -18,7 +18,7 @@
 
 #c4_form_preview_title
 {
-    border:1px solid black;
+    /*border:1px solid black;*/
     /*margin:auto;*/
     background-color:lightgrey;
 }
