Removed inline style, added overflow:hidden back to .frame

--- a/jstyle.css
+++ b/jstyle.css
@@ -100,7 +100,7 @@ div.frame
 {
     border:1px #666 solid;
     /*padding: 6px 12px;*/
-    /*overflow:hidden;*/
+    overflow:hidden;
 }
 
 p.highlight:hover
