--- a/jstyle.css
+++ b/jstyle.css
@@ -162,7 +162,8 @@ img.fly
 {
     width: 80%;
     height: 80%;
-    margin: auto;
+    display: block;
+    margin: 10% auto;
     overflow: hidden;
 }
 
