--- a/jstyle.css
+++ b/jstyle.css
@@ -183,3 +183,14 @@ img.fly
     left:0px;
     top:500px;
 }
+
+#cta-button
+{
+    padding: 12px 24px;
+    background-color: blue;
+    border: 2px solid white;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20pt;
+    font-weight: bold;
+}
